trying to create dashboard after login

--- a/spotify-project/src/app/app.component.html
+++ b/spotify-project/src/app/app.component.html
@@ -32,4 +32,8 @@
     border-radius: 15px;
     font-weight: 600;
   }
+  button:hover {
+    background-color: #1db954;
+    cursor: pointer;
+  }
 </style>
